fixed spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,7 @@ body {
     margin-top: 130px;
   }
   .book-img {
-    margin-left: 100px;  
+    margin-left: 50px;  
   }
 
 }
@@ -85,6 +85,7 @@ body {
 h3 {
     padding-top:5px;
     padding-left:10px;
+    font-size: 20px;
 }
 
 /* Make the masthead heading the same height as the navigation */
@@ -202,7 +203,7 @@ h3 {
 .tw-timeline {
     float:right;
     min-width: 100px;
-    width: 75%;
+    width: 70%;
 }
 
 .lambda-img {
